--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,37 @@ button {
   background-color: #ffffff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
+
+.main-title {
+  margin-bottom: 50px;
+}
+
+.hero {
+  padding-top: ;
+}
+
 /* header */
 
 .logo {
@@ -25,6 +56,7 @@ button {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 
 .logo-item-header {
@@ -50,6 +82,15 @@ button {
 
 .link-kontakt {
   font-style: normal;
+  display: flex;
+}
+.kontakt-list {
+  display: flex;
+}
+
+.page-header-kontainer {
+  display: flex;
+  justify-content: space-between;
 }
 
 .main-button {
@@ -60,7 +101,17 @@ button {
   letter-spacing: 0.04em;
   color: #ffffff;
   background-color: #4d5ae5;
+  height: 56px;
+  min-width: 169px;
+  border: none;
+  padding-right: 32px;
+  padding-left: 32px;
+  border-radius: 4px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 .main-button:hover {
   background-color: #404bbf;
 }
@@ -106,6 +157,7 @@ button {
 
 .section-title {
   background-color: #2e2f42;
+  padding-bottom: 120px;
 }
 
 .main-title {
@@ -116,6 +168,13 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-section {
+  padding-top: 60px;
+  padding-bottom: 120px;
 }
 
 .main-section-title {
@@ -139,10 +198,16 @@ button {
 
 .section-team {
   background-color: #f4f4fd;
+  padding-top: 60px;
+  padding-bottom: 120px;
+  margin-bottom: 120px;
+  display: flex;
+  gap: 24px;
 }
 
 .section-team-tittle {
   background-color: #ffffff;
+  width: calc((100%-72) / 4);
 }
 
 .team-name {
@@ -164,6 +229,11 @@ button {
 }
 
 /* 4 section */
+
+.section-portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 .portfolio {
   color: #2e2f42;
   font-family: Roboto;
@@ -217,4 +287,40 @@ button {
   text-align: left;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15 px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.page-navigation {
+  display: flex;
+}
+
+.menu {
+  display: flex;
+  gap: 40px;
+}
+
+.page-header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.section-title-container {
+  padding-top: 188px;
+  padding-bottom: 292px;
+  padding-right: 472px;
+  padding-left: 472px;
+  color: D9D9D9;
+  margin-bottom: 48px;
+  max-width: 496px;
+}
+
+.main-section-container {
+  display: flex;
 }
