--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ img {
   color: #ffffff;
   margin-left: auto;
   margin-right: auto;
+  max-width: 496px;
 }
 
 .main-section {
@@ -337,4 +338,11 @@ img {
 
 .main-section-container {
   display: flex;
+}
+.sec-cont {
+  gap: 24px;
+}
+
+.main-list-cont {
+  width: calc((100% - 72px) / 4);
 }
