--- a/css/styles.css
+++ b/css/styles.css
@@ -89,15 +89,13 @@ img {
   gap: 40px;
 }
 
-.menu-item {
-  padding: 24px 0;
-}
-
 .menu-link {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .menu-link:hover {
