--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,19 @@ img {
 /* andheader */
 
 /* 1 section */
+
+.container-title {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15 px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  padding-top: 188px;
+  padding-bottom: 188px;
+}
 .section-title {
   background-color: #2e2f42;
 }
