--- a/css/styles.css
+++ b/css/styles.css
@@ -294,8 +294,13 @@ img {
   text-transform: capitalize;
   margin-bottom: 72px;
 }
-.portfolio-img {
+.portfolio-cont {
   width: calc((100% - 48px) / 3);
+}
+.portfolio-inf {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .portfolio-list {
@@ -312,6 +317,7 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .portfolio-text {
