--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,8 @@ img {
 
 .section-title {
   background-color: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .section-title-container {
