--- a/css/styles.css
+++ b/css/styles.css
@@ -252,11 +252,10 @@ img {
 
 .section-team {
   background-color: #f4f4fd;
-  padding-top: 60px;
-  padding-bottom: 120px;
   margin-bottom: 120px;
   display: flex;
   gap: 24px;
+  padding: 120px 0;
 }
 
 .section-team-container {
@@ -309,7 +308,7 @@ img {
   margin-bottom: 72px;
 }
 .portfolio-cont {
-  width: calc((100% - 48px) / 3);
+  width: calc ((100%-48px)/3);
 }
 .portfolio-inf {
   padding: 32px 16px;
