--- a/css/styles.css
+++ b/css/styles.css
@@ -307,9 +307,10 @@ img {
   text-transform: capitalize;
   margin-bottom: 72px;
 }
-.portfolio-cont {
-  width: calc ((100%-48px)/3);
+.portfolio-list {
+  width: calc((100%-48px) / 3);
 }
+
 .portfolio-inf {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -352,6 +353,7 @@ img {
 
 .footer-web {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -361,6 +363,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-text {
