--- a/css/styles.css
+++ b/css/styles.css
@@ -299,7 +299,9 @@ img {
 .section-portfolio-container {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
+  width: calc((100%-48px) / 3);
 }
+
 .portfolio-inf {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -313,9 +315,9 @@ img {
   row-gap: 48px;
 }
 
-.portfolio-cont {
-  width: calc((100%-48px) / 3);
-}
+/* .portfolio-element { */
+/* width: calc((100%-48px) / 3); */
+/* } */
 
 .portfolio-title {
   color: #2e2f42;
