--- a/css/styles.css
+++ b/css/styles.css
@@ -299,6 +299,9 @@ img {
 .section-portfolio-container {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
+}
+
+.portfolio-element {
   width: calc((100%-48px) / 3);
 }
 
