--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ img {
 }
 
 .portfolio-element {
-  width: calc((100%-48px) / 3);
+  width: calc((100%-48) / 3);
 }
 
 .portfolio-inf {
@@ -317,10 +317,6 @@ img {
   column-gap: 24px;
   row-gap: 48px;
 }
-
-/* .portfolio-element { */
-/* width: calc((100%-48px) / 3); */
-/* } */
 
 .portfolio-title {
   color: #2e2f42;
