--- a/css/styles.css
+++ b/css/styles.css
@@ -316,7 +316,7 @@ img {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  width: calc((100%-48) / 3);
+  width: calc((100%-48px) / 3);
 }
 
 .portfolio-title {
