--- a/css/styles.css
+++ b/css/styles.css
@@ -315,7 +315,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
-  /* row-gap: 48px; */
+  row-gap: 48px;
 }
 
 .portfolio-title {
