--- a/css/styles.css
+++ b/css/styles.css
@@ -302,10 +302,6 @@ img {
   border: 1px solid #e7e9fc;
 }
 
-.portfolio-element {
-  width: calc((100% - 48px) / 3);
-}
-
 .portfolio-inf {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -317,6 +313,10 @@ img {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+}
+
+.portfolio-element {
+  width: calc((100% - 24px * 2) / 3);
 }
 
 .portfolio-title {
