--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,7 @@ img {
 
 .container {
   width: 1158px;
-  padding-left: 15px;
-  padding-right: 15 px;
+
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -298,7 +297,7 @@ img {
 }
 
 .section-portfolio-container {
-  padding: 32px 16px;
+  /* padding: 32px 16px; */
   border: 1px solid #e7e9fc;
 }
 
