--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,7 @@ img {
 
 .section-portfolio-container {
   /* padding: 32px 16px; */
-  border: 1px solid #e7e9fc;
+  /* border: 1px solid #e7e9fc; */
 }
 
 .portfolio-inf {
@@ -315,7 +315,7 @@ img {
 }
 
 .portfolio-element {
-  width: calc((100% - 24px * 2) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-title {
