--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,12 @@ img {
   color: #2e2f42;
   padding-top: 24px;
   padding-bottom: 24px;
+  position: relative;
+}
+
+.menu-link::before {
+  content: "";
+  display: block;
 }
 
 .menu-link:hover {
@@ -131,10 +137,17 @@ img {
 .section-title {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("../images/people-office\ 1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 1440px;
 }
 
 .section-title-container {
-  color: D9D9D9;
   padding-top: 188px;
   padding-bottom: 188px;
 }
@@ -248,7 +261,9 @@ img {
 .section-team-tittle {
   width: calc((100%-72) / 4);
   border-radius: 0px 0px 4px 4px;
-  background: #ffffff;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
 }
 
 .team {
@@ -316,6 +331,18 @@ img {
 
 .portfolio-element {
   width: calc((100% - 48px) / 3);
+  position: relative;
+  width: 360px;
+  height: 300px;
+  overflow: hidden;
+  margin-bottom: 16px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.portfolio-element:hover {
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
 }
 
 .portfolio-title {
@@ -383,7 +410,7 @@ img {
   border-bottom: 1px solid #e7e9fc;
 }
 
-.main-section-container {
+.main-section-container:hover {
 }
 
 .sec-cont {
@@ -399,4 +426,94 @@ img {
   color: #f4f4fd;
   display: inline-block;
   margin-bottom: 16px;
+}
+
+.social-list-item {
+  display: inline-block;
+  justify-content: center;
+  gap: 24px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  align-items: center;
+  background-color: #4d5ae5;
+  fill: #f4f4fd;
+  margin-left: 16px;
+  margin-bottom: 32px;
+}
+
+.social-list-item:hover {
+  background-color: #31d0aa;
+}
+
+.social-list-item:focus {
+  background-color: #31d0aa;
+}
+
+.current::after {
+  content: "";
+  display: block;
+  border-radius: 2px;
+  width: 48px;
+  height: 4px;
+  background: #404bbf;
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+}
+
+.main-icons {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  border-radius: 4px;
+  align-items: center;
+  border: 1px;
+  width: 100%;
+  max-width: 264px;
+  margin-bottom: 8px;
+}
+
+*:hover,
+*:focus {
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.box {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 255, 1);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.box:hover .overlay {
+  transform: translateY(0);
+}
+
+.footer-icon {
+  display: flex;
+  margin-left: 540px;
+  margin-top: 100px;
 }
